Fixed adding new items to meal plan

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,8 @@ spring.mvc.view.suffix=.jsp
 # DATABASE CONNECTION SETUP #
 # ========================= #
 # The URL to your database
-spring.datasource.url=jdbc:postgresql://doordiet.cntudlnkkc7a.eu-west-1.rds.amazonaws.com:5432/doordiet
+#spring.datasource.url=jdbc:postgresql://doordiet.cntudlnkkc7a.eu-west-1.rds.amazonaws.com:5432/doordiet
+spring.datasource.url=jdbc:postgresql://localhost/doordiet
 
 # User name and Password to your database
 spring.datasource.username=doordietmaster
@@ -21,8 +22,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 # To offload the responsibility to create the database tables for our
 # entities to the DATA JPA system, we can use the following configuration
-#spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 # There are 5 possible values we can give this configuration, see below for what each one does
 # update      -> update the schema
