--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,13 @@
             <version>1.1.11</version>
             <type>jar</type>
         </dependency>
+        
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-devtools -->
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-devtools</artifactId>
+		    <version>1.5.8.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<build>
