--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,10 @@
             <version>1.1.11</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+        	<groupId>org.thymeleaf</groupId>
+        	<artifactId>thymeleaf</artifactId>
+        </dependency>
 	</dependencies>
 
 	<build>
