--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.mvc.view.suffix=.jsp
 # DATABASE CONNECTION SETUP #
 # ========================= #
 # The URL to your database
-spring.datasource.url=jdbc:postgresql://doordiet.cntudlnkkc7a.eu-west-1.rds.amazonaws.com:5432/doordiet
+spring.datasource.url=jdbc:postgresql://localhost:5432/doordiet
 
 # User name and Password to your database
 spring.datasource.username=doordietmaster
